<resources>
    <string name="app_name">Astrum</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_sos">My Emergency Numbers</string>
    <string name="menu_contactus">CONTACT US</string>
    <string name="name">Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="add_emergency_number">Add Emergency Number</string>

    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
</resources>