<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sos"
            android:icon="@drawable/ic_menu_sos"
            android:title="@string/menu_sos" />
    </group>

    <group android:id="@+id/group2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_contactus"
            android:icon="@null"
            android:title="@string/menu_contactus" />

    </group>
</menu>