<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.astrum.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_sos"
        android:name="com.example.astrum.SOSFragment"
        android:label="@string/menu_sos"
        tools:layout="@layout/fragment_sos" />

    <fragment
        android:id="@+id/nav_contactus"
        android:name="com.example.astrum.ContactUsFragment"
        android:label="@string/menu_contactus"
        tools:layout="@layout/fragment_contactus" />
</navigation>